@@ -3,6 +3,8 @@ CHANGES.txt - 02/12/2003
 
 CHANGES IN CUPS V1.1.19
 
+	- The cupsEncodeOptions() function could encode an
+	  option with a NULL last string.
 	- The socket backend could report the wrong number of
 	  backchannel bytes if an error occurred on the link.
 	- The cups-polld program now only sleeps after getting
